--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Our Scripts -->
     <script type="text/javascript" src="Carousel.js"></script>
-    <!-- <script type="text/javascript" src="index.js"></script> -->
+    <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="axios.js"></script>
   </head>
 
@@ -42,7 +42,7 @@
     <!-- Breed Selection -->
     <h2 class="w-100 text-center mt-5">Select a Breed</h2>
     <select
-      id="breedSelect"
+      id="breed"
       style="width: 300px"
       class="form-select form-select-lg my-1 mx-auto"
       aria-label="form-select-lg"
