--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <!-- Our Scripts -->
-    <script type="text/javascript" src="Carousel.js"></script>
-    <script type="text/javascript" src="index.js"></script>
-    <script type="text/javascript" src="axios.js"></script>
+    <script type="text/javascript" defer src="Carousel.js"></script>
+    <script type="text/javascript" defer src="index.js"></script>
+    <!-- <script type="text/javascript" defer src="axios.js"></script> -->
   </head>
 
   <body>
@@ -42,7 +42,7 @@
     <!-- Breed Selection -->
     <h2 class="w-100 text-center mt-5">Select a Breed</h2>
     <select
-      id="breed"
+      id="breedSelect"
       style="width: 300px"
       class="form-select form-select-lg my-1 mx-auto"
       aria-label="form-select-lg"
