added part 6 and 7

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <!-- Our Scripts -->
     <script type="text/javascript" defer src="Carousel.js"></script>
-    <script type="text/javascript" defer src="index.js"></script>
-    <!-- <script type="text/javascript" defer src="axios.js"></script> -->
+    <!-- <script type="text/javascript" defer src="index.js"></script> -->
+    <script type="text/javascript" defer src="axios.js"></script>
   </head>
 
   <body>
